--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <div id="container">
+        <header></header>
+        <main></main>
+        <footer></footer>
+    </div>
 </body>
 </html>
