--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -10,7 +10,13 @@
 <body>
     <div id="container">
         <header></header>
-        <main></main>
+        <main>
+            <div id="flex"></div>
+                <div id="col">
+                <div id="col">
+                <div id="col">
+                </div>
+        </main>
         <footer></footer>
     </div>
 </body>
