--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -9,13 +9,24 @@
 </head>
 <body>
     <div id="container">
-        <header></header>
+        <header>
+            <h1>CSS Flexbox</h1>
+        </header>
         <main>
             <div id="flex"></div>
                 <div id="col">
+                    <h2>Column 1</h2>
+                    <img src="images/code.png" alt="Code">
+                    <p>Flexy</p>
                 <div id="col">
+                    <h2>Column 2</h2>
+                    <img src="images/laptop.png" alt="Laptop">
+                    <p>Flexy</p>
                 <div id="col">
-                </div>
+                    <h2>Column 3</h2>
+                    <img src="images/wireless-router.png" alt="Router">
+                    <p>Flexy</p>
+            </div>
         </main>
         <footer></footer>
     </div>
