--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -13,19 +13,22 @@
             <h1>CSS Flexbox</h1>
         </header>
         <main>
-            <div id="flex"></div>
+            <div id="flex">
                 <div id="col">
                     <h2>Column 1</h2>
                     <img src="images/code.png" alt="Code">
                     <p>Flexy</p>
+                </div>
                 <div id="col">
                     <h2>Column 2</h2>
                     <img src="images/laptop.png" alt="Laptop">
                     <p>Flexy</p>
+                </div>
                 <div id="col">
                     <h2>Column 3</h2>
                     <img src="images/wireless-router.png" alt="Router">
                     <p>Flexy</p>
+                </div>
             </div>
         </main>
         <footer></footer>
