--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -30,6 +30,7 @@
                     <p>Flexy</p>
                 </div>
             </div>
+            <img src="images/css.png" alt="CSS">
         </main>
         <footer></footer>
     </div>
