--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -32,7 +32,7 @@
             </div>
             <img src="images/css.png" alt="CSS">
         </main>
-        <footer></footer>
+        <footer>&copy; 2021 Flexbox Forever</footer>
     </div>
 </body>
 </html>
