--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -15,23 +15,23 @@
         </header>
         <main>
             <div id="flex">
-                <div id="col">
+                <div class="col">
                     <h2>Column 1</h2>
                     <img src="images/code.png" alt="Code">
                     <p>Flexy</p>
                 </div>
-                <div id="col">
+                <div class="col">
                     <h2>Column 2</h2>
                     <img src="images/laptop.png" alt="Laptop">
                     <p>Flexy</p>
                 </div>
-                <div id="col">
+                <div class="col">
                     <h2>Column 3</h2>
                     <img src="images/wireless-router.png" alt="Router">
                     <p>Flexy</p>
                 </div>
             </div>
-            <img src="images/css.png" alt="CSS">
+            <img class="main_img" src="images/css.png" alt="CSS">
         </main>
         <footer>&copy; 2021 Flexbox Forever</footer>
     </div>
