--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -4,36 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS FLexbox</title>
+    <title>Cactus Club</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div id="container">
         <header>
-            <h1>CSS Flexbox</h1>
+            <h1>Cactus Club</h1>
         </header>
         <main>
             <div id="flex">
                 <div class="col">
-                    <h2>Column 1</h2>
-                    <img src="images/code.png" alt="Code">
-                    <p>Flexy</p>
+                    <h2>Plant Care</h2>
+                    <img src="images/plant1.png" alt="Plant">
+                    <p>At Cactus Club we care about your plants, learn how to keep them healthy from our certified plant doctors.</p>
                 </div>
                 <div class="col">
-                    <h2>Column 2</h2>
-                    <img src="images/laptop.png" alt="Laptop">
-                    <p>Flexy</p>
+                    <h2>Green House</h2>
+                    <img src="images/leaf.png" alt="Leaf">
+                    <p>If you're a first-time plant parent, choose from our variety of expertly cared-for plant friends.</p>
                 </div>
                 <div class="col">
-                    <h2>Column 3</h2>
-                    <img src="images/wireless-router.png" alt="Router">
-                    <p>Flexy</p>
+                    <h2>Plant Supplies</h2>
+                    <img src="images/pottedplant.png" alt="Potted Plant">
+                    <p>All the supplies to stock your home garden, plus tips and tricks for optimal growth conditions.</p>
                 </div>
             </div>
-            <img class="main_img" src="images/css.png" alt="CSS">
+            <img class="main_img" src="images/sapling.png" alt="Sapling">
         </main>
-        <footer>&copy; 2021 Flexbox Forever</footer>
+        <footer>&copy; 2021 Green Thumb Cartel</footer>
     </div>
 </body>
 </html>
