--- a/lab4/index.html
+++ b/lab4/index.html
@@ -10,8 +10,16 @@
 </head>
 <body>
 <div id="container">
-    <header></header>
-    <nav></nav>
+    <header>
+        <h1>Long Drive Golf Course</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="media.html">Media</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+        </ul>
+    </nav>
     <main>
         <div id="upper_flex">
             <section></section>
