--- a/lab4/index.html
+++ b/lab4/index.html
@@ -22,7 +22,12 @@
     </nav>
     <main>
         <div id="upper_flex">
-            <section></section>
+            <section>
+                <h2>Welcome to LDGC!</h2>\
+                <p>Golf</p>
+                
+                <img src="images/birdie.png" alt="Golf">
+            </section>
             <aside></aside>
         </div>
 
