--- a/lab4/index.html
+++ b/lab4/index.html
@@ -28,7 +28,12 @@
                 
                 <img src="images/birdie.png" alt="Golf">
             </section>
-            <aside></aside>
+            <aside>
+                <h3>Schedule a Tee Time</h3>
+                <p>Golf</p>
+
+                <img src="images/golf3.png" alt="Golf">
+            </aside>
         </div>
 
         <div id="lower_flex">
