--- a/lab4/index.html
+++ b/lab4/index.html
@@ -38,8 +38,28 @@
 
         <div id="lower_flex">
             <div class="col"></div>
+                <h3>LGDC Media</h3>
+                <p>Golf</p>
+
+                <img src="images/drange1.jpg" alt="Drange">
+                <a href="media.html">Learn more...</a>
+            </div>
             <div class="col"></div>
             <div class="col"></div>
+                <h3>LGDC Gallery</h3>
+                <p>Golf</p>
+
+                <img src="images/drange2.jpg" alt="Drange">
+                <a href="gallery.html">Learn more...</a>
+            </div>
+            <div class="col"></div>
+            <div class="col"></div>
+                <h3>LGDC Blog</h3>
+                <p>Golf</p>
+
+                <img src="images/drange3.jpg" alt="Drange">
+                <a href="#">Learn more...</a>
+            </div>
         </div>
     </main>
     <footer></footer>
