--- a/lab4/index.html
+++ b/lab4/index.html
@@ -62,7 +62,7 @@
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>&copy; 2021 Long Drive Golf Course</footer>
 </div> 
 </body>
 </html>
