--- a/lab4/index.html
+++ b/lab4/index.html
@@ -23,7 +23,7 @@
     <main>
         <div id="upper_flex">
             <section>
-                <h2>Welcome to LDGC!</h2>\
+                <h2>Welcome to LDGC!</h2>
                 <p>Golf</p>
                 
                 <img src="images/birdie.png" alt="Golf">
