--- a/lab4/index.html
+++ b/lab4/index.html
@@ -42,21 +42,21 @@
                 <p>Golf</p>
 
                 <img src="images/drange1.jpg" alt="Drange">
-                <a href="media.html">Learn more...</a>
+                <a class="button" href="media.html">Learn more...</a>
             </div>
             <div class="col"></div>
                 <h3>LGDC Gallery</h3>
                 <p>Golf</p>
 
                 <img src="images/drange2.jpg" alt="Drange">
-                <a href="gallery.html">Learn more...</a>
+                <a class="button" href="gallery.html">Learn more...</a>
             </div>
             <div class="col"></div>
                 <h3>LGDC Blog</h3>
                 <p>Golf</p>
 
                 <img src="images/drange3.jpg" alt="Drange">
-                <a href="#">Learn more...</a>
+                <a class="button" href="#">Learn more...</a>
             </div>
         </div>
     </main>
